<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation2"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.kagg886.fuck_arc_b30.ui.home.HomeFragment"
            android:label="@string/title_summary"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.kagg886.fuck_arc_b30.ui.dashboard.Best30Fragment"
            android:label="@string/title_b30"
            tools:layout="@layout/fragment_best30"/>

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.kagg886.fuck_arc_b30.ui.notifications.NotificationsFragment"
            android:label="@string/title_query"
            tools:layout="@layout/fragment_notifications"/>
</navigation>