<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.ui.dashboard.Best30Fragment">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="100sp">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="30sp"
                      android:layout_marginTop="10sp"
                      android:id="@+id/fragment_b30_user"
                      android:text="@string/best30_status"
                      android:textSize="20sp" app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout android:layout_width="70sp"
                          android:layout_height="70sp"
                          android:gravity="bottom|center"
                          android:id="@+id/fragment_b30_bg"
                          android:layout_margin="30sp"
                          android:background="@color/purple_200"
                          app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                          app:layout_constraintBottom_toBottomOf="parent">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textStyle="bold"
                          android:textColor="@color/white"
                          android:id="@+id/fragment_b30_ptt"
                          android:layout_marginBottom="7sp"
                          android:text="@string/ptt_max"/>
            </LinearLayout>

            <TextView
                    android:text="@string/loading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_b30_ptt_b30"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_b30_ptt_r10"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_b30_user"
                    app:layout_constraintStart_toStartOf="@+id/fragment_b30_user"/>

            <TextView
                    android:text="@string/loading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_b30_ptt_r10"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_b30_bg"
                    app:layout_constraintStart_toStartOf="@+id/fragment_b30_user"
                    app:layout_constraintEnd_toEndOf="@+id/fragment_b30_ptt_b30"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/b30_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/b30_flow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:flow_horizontalGap="10dp"
                    app:flow_verticalGap="10dp"
                    app:flow_wrapMode="aligned"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>